hard-gists/070c805d947bd17c7a19/run.log
=== Docker Run Log for 070c805d947bd17c7a19 ===
Started at: Mi 29. Okt 11:29:21 CET 2025

[2025-10-29 11:29:22] START: Running container for 070c805d947bd17c7a19
[2025-10-29 11:29:22] SUCCESS: Container e8858afbbc028d632ac4cfde3a70ff1d994c03a967e4f73b97c9ec94e9ce50ff started for 070c805d947bd17c7a19
=== Container logs for 070c805d947bd17c7a19 ===
  File "/snippet.py", line 26
    print """ 
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 070c805d947bd17c7a19 ===
[2025-10-29 11:29:24] INFO: Container e8858afbbc028d632ac4cfde3a70ff1d994c03a967e4f73b97c9ec94e9ce50ff has stopped
